<resources>
    <string name="app_name">Country</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="region">Region</string>
    <string name="countryname">Country Name</string>
    <string name="countrycapital">Country Capital</string>
    <string name="countryregion">Country Region</string>
    <string name="currency">Country Councy</string>
    <string name="language">Country LAnguage</string>
</resources>